syntax = "proto3";

option go_package = "github.com/dawitel/grpc-go/protogen/golang/products";

enum ProductType {
    UNKNOWN = 0;
    FOOD = 1;
    DRINK = 2;
}

message Product {
    uint64 product_name = 1 [json_name = "product_name"];
    uint64 product_id = 2 [json_name = "product_id"];
    ProductType product_type = 5 [json_name = "product_type"];
}
